# Ray-Splitting-for-DVR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  bindings.cpp
gui/: CMakeLists.txt  camera_gui.cpp  camera_gui.h  main.cpp  mean_variance.h  tf_editor.cpp  tf_editor.h  visualizer.cpp  visualizer.h  visualizer_commons.h  visualizer_kernels.cu  visualizer_kernels.h
gui/imgui/: imgui.h  imgui_widgets.cpp
pytests/: CMakeLists.txt  testBigImages.py  testDvrHumanConvergence.py  testDvrMarschnerLobb.py  testDvrSphere.py  testDvrTube.py  testIsoPerformance.py  testRaySplitting.py  utils.py
renderer/: CMakeLists.txt  camera.cpp  camera.h  commons.h  helper_math.cuh  kernel_launcher.cpp  kernel_launcher.h  lib.h  opengl_framebuffer.cu  opengl_framebuffer.h  opengl_mesh.cpp  opengl_mesh.h  opengl_oit.cpp  opengl_oit.h  opengl_renderer.cpp  opengl_renderer.cu  opengl_renderer.h  opengl_shader.cpp  opengl_shader.h  opengl_utils.h  python_bindings.cpp  renderer.cpp  renderer.h  renderer_color.cuh  renderer_commons.cuh  renderer_impl_dvr.cuh  renderer_impl_iso.cuh  renderer_kernels_dvr.cuh  renderer_kernels_iso.cuh  renderer_math.cuh  renderer_math_cpu.cpp  renderer_math_cpu.h  renderer_math_iso.cuh  renderer_math_iso_TricubicFactors.inl  renderer_rtc.cpp  renderer_settings.cuh  renderer_static.cu  renderer_utils.cuh  settings.cpp  settings.h  (+10 more)
renderer/shaders/: OITDvrBlending.fs  PassThrough.vs  ShowNormals.fs
scenes/: bigBug1.json  bigCarp.json  bigEjecta1.json  bigEjecta2Filled.json  bigHuman1.json  bigRM1Filled.json  bigRM2.json  bigThorax1ScaleInvariant.json  bigThorax2Regular.json  dvrLobb-noise1.json  dvrLobb-scene1.json  dvrLobb-scene2.json  dvrLobb-scene3.json
tests/: CMakeLists.txt  ejecta-close.json  ejecta-far.json  main.cpp  testBigImages.py  testDvrBeetleConvergence.py  testDvrCassini.py  testDvrDDA.cpp  testDvrMarschnerLobb.py  testDvrMarschnerLobbConvergence.py  testDvrSphere.py  testDvrTube.py  testDvrVoxelEval.cpp  testIsoPerformance.cpp  testIsoPrecision.cpp  testMarchingCubes.cpp  testMarmitt.cpp  testMathBernstein.cpp  testMathCombinatorics.cpp  testMathCubicPoly.cpp  testMathPolyExpPoly.cpp  testMathPolynomial.cpp  testMathUtils.cpp  testQuadrature.cpp  testRendererMathCpu.cpp  testTrapezoidBounds.cpp  testTrapezoidBounds.cu  testTrapezoidBounds.h  test_utils.cu  test_utils.h
volumes/: BeetleLarge.cvol  RM273_512.cvol  VisibleHuman16Bit.cvol  ejecta_050_256.cvol  ejecta_272_512_ushort.cvol  single_jet.cvol  thorax50.cvol  thorax70.cvol  vmhead256cubed.cvol
